--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql-tag": "^2.9.2",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
+    "react-beautiful-dnd": "^10.0.1",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
