--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
     "react-beautiful-dnd": "^10.0.1",
+    "react-datepicker": "^2.0.0",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "reactstrap": "^6.4.0"
+    "reactstrap": "^6.4.0",
+    "strftime": "^0.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "react-time-format": "0.0.5"
   }
 }
