--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-apollo": "^2.1.11",
     "react-beautiful-dnd": "^10.0.1",
     "react-datepicker": "^2.0.0",
+    "react-day-picker": "^7.2.4",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
