--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "apollo-link-context": "^1.0.8",
     "apollo-link-http": "^1.5.4",
     "bootstrap": "^4.1.3",
+    "downshift": "^3.1.7",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.9.2",
+    "moment-duration-format": "^2.2.2",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
     "react-beautiful-dnd": "^10.0.1",
     "react-datepicker": "^2.0.0",
-    "react-day-picker": "^7.2.4",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "reactstrap": "^6.4.0",
-    "strftime": "^0.10.0"
+    "reactstrap": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
