--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-spring": "^7.2.10",
     "reactstrap": "^6.4.0"
   },
   "scripts": {
