--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
+    "react-s-alert": "^1.4.1",
     "react-scripts": "1.1.5",
     "react-spring": "^7.2.10",
     "reactstrap": "^6.4.0"
