--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_LOGIN_URL=https://enviroommate.org/app-dev/api/login
 REACT_APP_GRAPHQL_URL=https://enviroommate.org/app-dev/api/gql
 REACT_APP_WIKI_URL=https://enviroommate.org/wiki
+REACT_APP_IMG_URL=https://enviroommate.org/app-dev/img
