--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_LOGIN_URL=https://enviroommate.org/app-dev/api/login
-REACT_APP_GRAPHQL_URL=https://enviroommate.org/app-dev/api/gql
-REACT_APP_WIKI_URL=https://enviroommate.org/wiki
-REACT_APP_IMG_URL=https://enviroommate.org/app-dev/img
-REACT_APP_DASHBOARD_URL=https://enviroommate.org/dashboard
+REACT_APP_LOGIN_URL=https://klimafuchs.org/app-dev/api/login
+REACT_APP_GRAPHQL_URL=https://klimafuchs.org/app-dev/api/gql
+REACT_APP_WIKI_URL=https://klimafuchs.org/wiki
+REACT_APP_IMG_URL=https://klimafuchs.org/app-dev/img
+REACT_APP_DASHBOARD_URL=https://klimafuchs.org/dashboard
